2009-02-17 TualatriX <tualatrix@gmail.com>

	* tiny_mce: Fix the bug cause 500.

2009-02-16 TualatriX <tualatrix@gmail.com>

	* templatetags/highlight.py: Finish the code highlight.

2009-02-15 TualatriX <tualatrix@gmail.com>

	* pingback, django_xmlrpc: Start to implement the pingback.

2009-02-12 TualatriX <tualatrix@gmail.com>

	* Update the tiny_mce and fix a 500 error caused by text_area.js.

2009-02-09 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py, view/utils.py: Remove the favicon and robots views.
	* templates/menu.html: Update to English.

2009-02-08 TualatriX <tualatrix@gmail.com>

	* templates/tag/tag.html: Fix a bug caused KeyError
	* templates/comment/comment.html: Fix the bug that button for tab.

2009-02-06 TualatriX <tualatrix@gmail.com>

	* templatetags/comment.py, views/comment.py,
	views/post.py,pulog/views/favourites.py:  Store
	cookie for CommentForm.

2009-02-05 TualatriX <tualatrix@gmail.com>

	* templates/menu.html, views/favourites.py: Menu and Favourite not
	works.
	* templates/comment/comment_list.html: Add a comment list page.

2009-02-04 TualatriX <tualatrix@gmail.com>

	* templatetags/comment.py: Make the Edit displayed for Admin only.
	* views/utils.py: Improve the Search and Pagination for Search.

2009-01-31 TualatriX <tualatrix@gmail.com>

	* pulog/***: Rewrite the pagination, more powerful!

2009-01-28 TualatriX <tualatrix@gmail.com>

	* urls.py: Add the Favourite to Sitemap.

2009-01-27 TualatriX <tualatrix@gmail.com>

	* templates/base.html: Add the google-auth to base.html.
	* urls.py: Add the index.html to index view.

2009-01-23 TualatriX <tualatrix@gmail.com>

	* templatetags/media.py: Make the get_image_url return no thumb.
	* views/comment.py: Fixed the bug caused by non email. Prepare the
	cookie for comment.

2009-01-22 TualatriX <tualatrix@gmail.com>

	* templatetags/media.py: Make the get_media order_by('-date') and
	count to 10, the thumb to 640.

2009-01-16 TualatriX <tualatrix@gmail.com>
